--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,7 +12,44 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Technigo React App</title>
+
+    <!-- HTML Meta Tags -->
+    <title>The office API</title>
+    <meta name="description" content="" />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://sofia-theoffice-frontend.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="The office API" />
+    <meta property="og:description" content="" />
+    <meta
+      property="og:image"
+      content="https://i.postimg.cc/Fz6VmLfb/sofia-theoffice-frontend-netlify-app.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="sofia-theoffice-frontend.netlify.app"
+    />
+    <meta
+      property="twitter:url"
+      content="https://sofia-theoffice-frontend.netlify.app/"
+    />
+    <meta name="twitter:title" content="The office API" />
+    <meta name="twitter:description" content="" />
+    <meta
+      name="twitter:image"
+      content="https://i.postimg.cc/Fz6VmLfb/sofia-theoffice-frontend-netlify-app.png"
+    />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+    <title>The office frontend API app</title>
   </head>
 
   <body>
@@ -30,5 +66,4 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-
 </html>
